Crash upon finishing render with 'Cache Result' enabled #45328

Closed
opened 2015-07-05 18:01:27 +02:00 by Greg Zaal · 5 comments
Member

System Information
Windows 7 64 bit, gtx 570

Blender Version
Broken: Latest buildbot - 68d72e2

Short description of error
If "Cache Result" in the Output panel is enabled, blender crashes when it finishes a render.

Tried resetting to factory defaults, still crashes - both cycles and internal.

Console output:

found bundled python: Z:\BlenderBuilds\Latest\2.75\python
Caching exr file, 960x540, C:\Users\greg\AppData\Local\Temp\cached_RR_UNSAVED_Scene_00000000000000000000000000000000.exr
Error: EXCEPTION_ACCESS_VIOLATION

Exact steps for others to reproduce the error

  • Enable "Cache Result" in the render Output panel
  • Hit Render/F12
**System Information** Windows 7 64 bit, gtx 570 **Blender Version** Broken: Latest buildbot - 68d72e2 **Short description of error** If "Cache Result" in the Output panel is enabled, blender crashes when it finishes a render. Tried resetting to factory defaults, still crashes - both cycles and internal. Console output: ``` found bundled python: Z:\BlenderBuilds\Latest\2.75\python Caching exr file, 960x540, C:\Users\greg\AppData\Local\Temp\cached_RR_UNSAVED_Scene_00000000000000000000000000000000.exr Error: EXCEPTION_ACCESS_VIOLATION ``` **Exact steps for others to reproduce the error** - Enable "Cache Result" in the render Output panel - Hit Render/F12
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal

This issue was referenced by 266459c7da

This issue was referenced by 266459c7da24bd54fbe20a6eac8e6db4f5ac7be7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thanks Sergey!

Thanks Sergey!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45328
No description provided.