Fix T45328: Crash upon finishing render with 'Cache Result' enabled